# rtool

./: .oxfmtrc.json  .oxlintrc.json  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  uno.config.ts  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/app_manager/: Cargo.toml
src-tauri/crates/app_manager/src/: api.rs  app_manager.rs  discovery.rs  index.rs  lib.rs
src-tauri/crates/app_manager/tests/: query_contract_tests.inc  residue_tests.inc
src-tauri/crates/application/: Cargo.toml
src-tauri/crates/application/src/: lib.rs  runtime_state.rs  user_settings.rs
src-tauri/crates/clipboard/: Cargo.toml
src-tauri/crates/clipboard/src/: clipboard_service.rs  lib.rs  service.rs
src-tauri/crates/clipboard/tests/: clipboard_service_tests.inc
src-tauri/crates/core/: Cargo.toml
src-tauri/crates/core/src/: common.rs  error.rs  errors.rs  i18n.rs  i18n_catalog.rs  lib.rs  models.rs  runtime_state.rs  user_settings.rs
src-tauri/crates/db/: Cargo.toml
src-tauri/crates/db/src/: db.rs  db_clipboard_store.rs  db_error.rs  lib.rs
src-tauri/crates/db/tests/: db_tests.inc
src-tauri/crates/domain/: Cargo.toml
src-tauri/crates/domain/src/: clipboard_service.rs  host.rs  lib.rs
src-tauri/crates/foundation/: Cargo.toml
src-tauri/crates/foundation/src/: clipboard.rs  errors.rs  lib.rs  resource_monitor.rs
src-tauri/crates/foundation/tests/: launcher_metrics_tests.rs
src-tauri/crates/i18n/: Cargo.toml
src-tauri/crates/i18n/src/: i18n_catalog.rs  lib.rs
src-tauri/crates/infra/: Cargo.toml
src-tauri/crates/infra/src/: clipboard.rs  db.rs  db_error.rs  lib.rs  logging.rs
src-tauri/crates/kernel/: Cargo.toml
src-tauri/crates/kernel/src/: lib.rs
src-tauri/crates/launcher/: Cargo.toml
src-tauri/crates/launcher-app/: Cargo.toml
src-tauri/crates/launcher-app/src/: host.rs
src-tauri/crates/launcher/src/: host.rs  icon.rs  index.rs  lib.rs  refresh.rs  scan.rs  service.rs
src-tauri/crates/launcher/tests/: launcher_index_service_tests.inc  launcher_service_tests.inc
src-tauri/crates/logging/: Cargo.toml
src-tauri/crates/logging/src/: config.rs  export.rs  ingest.rs  lib.rs  logging.rs  store.rs
src-tauri/crates/protocol/: Cargo.toml
src-tauri/crates/protocol/src/: errors.rs  lib.rs  models.rs
src-tauri/crates/resource-monitor/: Cargo.toml
src-tauri/crates/resource-monitor/src/: lib.rs
src-tauri/crates/resource-monitor/tests/: launcher_metrics_tests.rs
src-tauri/crates/rtool-app/: Cargo.toml
src-tauri/crates/rtool-app/src/: lib.rs
src-tauri/crates/rtool-capture/: Cargo.toml
src-tauri/crates/rtool-capture/src/: clipboard_service.rs  helpers.rs  lib.rs  screenshot.rs
src-tauri/crates/rtool-contracts/: Cargo.toml
src-tauri/crates/rtool-contracts/src/: clipboard_key.rs  errors.rs  lib.rs  models.rs
src-tauri/crates/rtool-data/: Cargo.toml
src-tauri/crates/rtool-data/src/: db.rs  db_bootstrap.rs  db_clipboard_store.rs  db_error.rs  lib.rs
src-tauri/crates/rtool-discovery/: Cargo.toml
src-tauri/crates/rtool-discovery/src/: host.rs  lib.rs
src-tauri/crates/rtool-host-tauri/: Cargo.toml
src-tauri/crates/rtool-host-tauri/src/: constants.rs  lib.rs
src-tauri/crates/rtool-kernel/: Cargo.toml
src-tauri/crates/rtool-kernel/src/: feature.rs  i18n_catalog.rs  lib.rs  orchestrator.rs  request_context.rs  runtime_budget.rs  runtime_state.rs
src-tauri/crates/rtool-logging/: Cargo.toml
src-tauri/crates/rtool-logging/src/: lib.rs  logging.rs  query.rs  store.rs
src-tauri/crates/rtool-platform/: Cargo.toml
src-tauri/crates/rtool-platform/src/: icon.rs  launcher.rs  lib.rs
src-tauri/crates/rtool-settings/: Cargo.toml
src-tauri/crates/rtool-settings/src/: lib.rs  settings.rs
src-tauri/crates/shell/: Cargo.toml
src-tauri/crates/shell/src/: command_runtime.rs  lib.rs
src-tauri/crates/shell/tests/: command_contract_consistency.rs  dependency_boundary_tests.rs
src-tauri/crates/system/: Cargo.toml
src-tauri/crates/system/src/: lib.rs  resource_monitor.rs
src-tauri/crates/tauri-shell/: Cargo.toml
src-tauri/crates/tauri-shell/src/: command_runtime.rs  constants.rs  lib.rs
src-tauri/crates/tauri-shell/tests/: dependency_boundary_tests.rs
src-tauri/crates/transfer/: Cargo.toml
src-tauri/crates/transfer/src/: archive.rs  discovery.rs  lib.rs  protocol.rs  resume.rs  session.rs  store.rs  transfer.rs
src-tauri/crates/usecase/: Cargo.toml
src-tauri/crates/usecase/src/: context.rs  runtime_state.rs  user_settings.rs
src-tauri/src/: constants.rs  lib.rs  main.rs
src-tauri/src/app/: app_manager_service.rs  clipboard_service.rs  clipboard_sync.rs  icon_service.rs  launcher_index_service.rs  launcher_service.rs  mod.rs  palette_service.rs  state.rs  transfer_service.rs
src-tauri/src/app/app_manager_service/: api.rs  index.rs  mod.rs  residue_cleanup.rs  residue_scan.rs  startup.rs  uninstall.rs
src-tauri/src/app/transfer_service/: discovery.rs  events.rs  handshake.rs  incoming.rs  incoming_pipeline.rs  manifest_stage.rs  mod.rs  outgoing.rs  outgoing_pipeline.rs  persistence.rs  send_preparation.rs
src-tauri/src/bootstrap/: invoke.rs  mod.rs  setup.rs
src-tauri/src/clipboard_watcher/: image_preview.rs  mod.rs  processor.rs
src-tauri/src/commands/: app_manager.rs  clipboard.rs  dashboard.rs  i18n_import.rs  launcher.rs  locale.rs  logging.rs  mod.rs  palette.rs  transfer.rs
src-tauri/src/core/: errors.rs  i18n.rs  i18n_catalog.rs  mod.rs  models.rs
src-tauri/src/infrastructure/: clipboard.rs  db.rs  logging.rs  mod.rs
src-tauri/src/infrastructure/runtime/: blocking.rs
src-tauri/src/infrastructure/transfer/: archive.rs  discovery.rs  mod.rs  protocol.rs  (+3 more)
src-tauri/src/native_ui/: clipboard_window.rs  mod.rs  shortcuts.rs  tray.rs  windows.rs
src-tauri/tests/app/: clipboard_service_tests.rs  icon_service_tests.rs  launcher_index_service_tests.rs  launcher_service_tests.rs
src-tauri/tests/commands/: clipboard_tests.rs
src-tauri/tests/core/: errors_tests.rs
src-tauri/tests/infrastructure/: db_tests.rs  logging_tests.rs
(+530 files in other folders)
