[workspace]
members = [
    "crates/foundation",
    "crates/domain",
    "crates/usecase",
    "crates/shell",
]
resolver = "2"

[workspace.dependencies]
anyhow = { version = "1.0.97", features = ["backtrace"] }
arboard = "3.6.1"
active-win-pos-rs = "0.9.1"
base64 = "0.22.1"
blake3 = "1.8.3"
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
image = { version = "0.25.9", default-features = false, features = ["png"] }
libsql = { version = "0.9.29", default-features = false, features = ["core"] }
rand = "0.10.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.38.2"
tauri = { version = "2.10.2", features = ["macos-private-api", "tray-icon", "protocol-asset"] }
tauri-build = { version = "2.5.5", features = [] }
tauri-plugin-clipboard = "2.1.11"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-opener = "2.5.3"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "net", "time", "sync", "fs", "io-util"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "json", "time"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }
walkdir = "2.5.0"
wincode = { version = "0.4.4", features = ["derive"] }
zip = { version = "8.1.0", default-features = false, features = ["deflate"] }

foundation = { path = "crates/foundation" }
domain = { path = "crates/domain" }
usecase = { path = "crates/usecase" }
shell = { path = "crates/shell" }

[package]
name = "rtool"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

[lib]
name = "rtool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
shell = { workspace = true }
tauri = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-global-shortcut = { workspace = true }
tauri-plugin-clipboard = { workspace = true }
