[package]
name = "rtool_app_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
protocol = { package = "rtool_protocol", path = "../protocol" }
rtool_launcher_dep = { package = "rtool_launcher", path = "../launcher" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
