[package]
name = "clipboard"
version = "0.1.0"
edition = "2024"

[dependencies]
app_core = { workspace = true }
app_infra = { workspace = true }
anyhow = { workspace = true }
arboard = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }
image = { workspace = true }
serde_json = { workspace = true }
sysinfo = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
