[package]
name = "core"
version = "0.1.0"
edition = "2024"

[lib]
name = "app_core"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
arboard = { workspace = true }
r2d2 = { workspace = true }
rusqlite = { workspace = true }
