[package]
name = "domain"
version = "0.1.0"
edition = "2024"

[dependencies]
foundation = { path = "../foundation" }
anyhow = { workspace = true }
arboard = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }
image = { workspace = true }
libsql = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = { workspace = true }
tauri = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
