[package]
name = "infra"
version = "0.1.0"
edition = "2024"

[dependencies]
app_core = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }
chacha20poly1305 = { workspace = true }
libsql = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }
wincode = { workspace = true }
zip = { workspace = true }
