[package]
name = "launcher-app"
version = "0.1.0"
edition = "2024"

[dependencies]
app_core = { workspace = true }
app_infra = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
regex = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }
