[package]
name = "rtool-data"
version = "0.1.0"
edition = "2024"

[dependencies]
rtool_contracts = { workspace = true }
anyhow = { workspace = true }
libsql = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
