[package]
name = "rtool-discovery"
version = "0.1.0"
edition = "2024"

[dependencies]
rtool_contracts = { workspace = true }
rtool_platform = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
rtool_data = { workspace = true }
rtool_kernel = { workspace = true }
rtool_capture = { workspace = true }
libsql = { workspace = true }
tokio = { workspace = true }
tauri = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
