[package]
name = "rtool-host-tauri"
version = "0.1.0"
edition = "2024"

[dependencies]
rtool_contracts = { workspace = true }
rtool_app = { workspace = true }
rtool_platform = { workspace = true }
rtool_kernel = { workspace = true }
anyhow = { workspace = true }
arboard = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }
image = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
tauri-plugin-clipboard = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-global-shortcut = { workspace = true }
tauri-plugin-opener = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
xcap = { workspace = true }
