[package]
name = "tauri-shell"
version = "0.1.0"
edition = "2024"

[dependencies]
app_core = { workspace = true }
app_infra = { workspace = true }
app_launcher_app = { workspace = true }
app_clipboard = { workspace = true }
app_transfer = { workspace = true }
app_resource_monitor = { workspace = true }
anyhow = { workspace = true }
active-win-pos-rs = { workspace = true }
arboard = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }
image = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = { workspace = true }
tauri = { workspace = true }
tauri-plugin-clipboard = { workspace = true }
tauri-plugin-global-shortcut = { workspace = true }
tauri-plugin-opener = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
