[package]
name = "transfer"
version = "0.1.0"
edition = "2024"

[dependencies]
app_core = { workspace = true }
app_infra = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
